<resources>
	<string name="app_name">Proshare</string>
	<string name="request_loan" translatable="true">Request Loan</string>
	<string name="check_loan" translatable="true">Check Loan Status</string>
	<string name="balance_icon" translatable="true">balance icon</string>
	<string name="new_icon" translatable="true">new icon</string>
	<string name="repay_loan" translatable="true">Repay Loan</string>
	<string name="settings_icon" translatable="true">settings icon</string>
	<string name="exit_icon" translatable="true">Exit icon</string>
	<string name="email_hint" translatable="true">Enter e-mail</string>
	<string name="password_hint" translatable="true">Enter password</string>
	<string name="forgot_password" translatable="true">Forgot password?</string>
	<string name="login_button_text" translatable="true">Login</string>
	<string name="signup_button_text" translatable="true">Signup</string>
	<string name="lock_icon" translatable="true">Lock icon</string>
	<string name="label_id_type" translatable="true">Select ID Type</string>
	<string name="fname_hint" translatable="true">First Name</string>
	<string name="mname_hint" translatable="true">Middle Name</string>
	<string name="lname_hint" translatable="true">Last Name</string>
	<string name="mobile_hint" translatable="true">Phone Number</string>
	<string name="id_number_hint" translatable="true">ID Number</string>
	<string name="got_id" translatable="true">Got an ID?</string>
	<string name="button_text_next" translatable="true">Next</string>
	<string name="close_icon" translatable="true">close icon</string>
	<string name="id_number_label">ID Number</string>
	<string name="email_label">E-mail</string>
	<string name="button_text_back">Back</string>
	<string name="address_label">Address</string>
	<string name="address_hint">Enter address</string>
	<string name="label_upload_id">Upload a picture of your ID</string>
	<string name="secure_your_account">Secure your account</string>
	<string name="button_text_finish">Finish</string>
    <string name="nida_get">Requesting from NIDA...</string>
	<string name="nida_id_hint">NIDA ID Number</string>
	<string name="driver_id_hint">License Number</string>
	<string name="voter_id_hint">Voter Number</string>
	<string name="id_hint">Enter ID Number</string>
    <string name="dob_label">Date of Birth</string>
    <string name="dob_hint">Date of birth</string>
    <string name="loan_application">Loan Application</string>
	<string name="select_laon_type">Select Laon Type</string>
    <string name="todo">TODO</string>
    <string name="loan_amount_label">Loan Amount</string>
	<string name="loan_amount_hint">Enter loan amount</string>
	<string name="select_loan_period">Select Loan Period</string>
    <string name="view_summary">View Summary</string>
    <string name="total_amount_label">Total amount to pay</string>
	<string name="interest_amount_label">Interest Amount</string>
    <string name="installment_amount_label">Monthly Installment</string>
    <string name="confirm">Confirm</string>
	<string name="sample_interest">2,500,000</string>
	<string name="sample_loan_amount">10,000,000</string>
	<string name="sample_loan_total">12,500,000</string>
	<string name="sample_loan_installment">2,083,333</string>
    <string name="confirm_exit">Are you sure you want to exit the app now?</string>
    <string name="confirm_exit_title">Confirm Exit</string>
	<string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="upload_proof">Upload Proof Documents</string>
    <string name="upload_proof_document">Upload proof document</string>
    <string name="send">Send</string>
	<string name="upload">Upload</string>
    <string name="principal">Principal</string>
	<string name="sample_principal">2,000,000</string>
	<string name="Interest">Interest</string>
	<string name="sample_interest_installment">83,333</string>
	<string name="fees">Fees</string>
	<string name="_0_0">0.0</string>
    <string name="repay_now">Repay Now</string>
	<string name="installment_1">Installment 1</string>
    <string name="sample_date">02-11-2019</string>
	<string name="due_date">Due date</string>

	<string-array name="idtypes">
		<item>National ID</item>
		<item>Driving License</item>
		<item>Voter ID</item>
	</string-array>
	<string-array name="loan_types">
		<item>Wezesha</item>
		<item>Dharura</item>
		<item>Biashara</item>
		<item>Timiza</item>
	</string-array>

	<string-array name="loan_periods">
		<item>3 months</item>
		<item>6 months</item>
		<item>12 months</item>
	</string-array>
</resources>
