<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:background="@android:color/white"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvInstallmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/installment_1"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInstallmentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/sample_loan_installment"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvInstallmentName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvInstallmentName"
            app:layout_constraintTop_toTopOf="@+id/tvInstallmentName" />

        <TextView
            android:id="@+id/tvLabelPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/principal"
            android:textColor="@color/colorTextDark"
            app:layout_constraintStart_toStartOf="@+id/tvInstallmentName"
            app:layout_constraintTop_toBottomOf="@+id/tvInstallmentName" />

        <TextView
            android:id="@+id/tvInstallmentPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_principal"
            android:textColor="@color/colorTextDark"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabelPrincipal"
            app:layout_constraintEnd_toEndOf="@+id/tvInstallmentAmount"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvLabelPrincipal"
            app:layout_constraintTop_toTopOf="@+id/tvLabelPrincipal" />

        <TextView
            android:id="@+id/tvLabelInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Interest"
            android:textColor="@color/colorTextDark"
            app:layout_constraintStart_toStartOf="@+id/tvLabelPrincipal"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelPrincipal" />

        <TextView
            android:id="@+id/tvInstallmentInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_interest_installment"
            android:textColor="@color/colorTextDark"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabelInterest"
            app:layout_constraintEnd_toEndOf="@+id/tvInstallmentPrincipal"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvLabelInterest"
            app:layout_constraintTop_toTopOf="@+id/tvLabelInterest" />

        <TextView
            android:id="@+id/tvLabelFees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fees"
            android:textColor="@color/colorTextDark"
            app:layout_constraintStart_toStartOf="@+id/tvLabelInterest"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelInterest" />

        <TextView
            android:id="@+id/tvInstallmentFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_0"
            android:textColor="@color/colorTextDark"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabelFees"
            app:layout_constraintEnd_toEndOf="@+id/tvInstallmentInterest"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvLabelFees"
            app:layout_constraintTop_toTopOf="@+id/tvLabelFees" />

        <Button
            android:id="@+id/btnRepay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_round_corners_primary_dark"
            android:text="@string/repay_now"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvInstallmentDate"
            app:layout_constraintTop_toBottomOf="@+id/tvInstallmentDate" />

        <TextView
            android:id="@+id/tvLabelInstallmentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/due_date"
            android:textColor="@color/colorTextDark"
            app:layout_constraintStart_toStartOf="@+id/tvLabelFees"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelFees" />

        <TextView
            android:id="@+id/tvInstallmentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_date"
            android:textColor="@color/colorTextDark"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabelInstallmentDate"
            app:layout_constraintEnd_toEndOf="@+id/tvInstallmentFee"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvLabelInstallmentDate"
            app:layout_constraintTop_toTopOf="@+id/tvLabelInstallmentDate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
