<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/colorPrimaryDark"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<ImageView
		android:id="@+id/ivLock"
		android:layout_width="72dp"
		android:layout_height="72dp"
		android:layout_marginTop="84dp"
		android:contentDescription="@string/lock_icon"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_lock_black_24dp" />

	<EditText
		android:id="@+id/etEmail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="32dp"
		android:layout_marginStart="32dp"
		android:layout_marginTop="64dp"
		android:background="@drawable/bg_round_corners_white"
		android:ems="10"
		android:hint="@string/email_hint"
		android:inputType="textEmailAddress"
		android:paddingBottom="16dp"
		android:paddingEnd="24dp"
		android:paddingStart="24dp"
		android:paddingTop="16dp"
		app:layout_constraintEnd_toEndOf="@+id/ivLock"
		app:layout_constraintStart_toStartOf="@+id/ivLock"
		app:layout_constraintTop_toBottomOf="@+id/ivLock"
		android:autofillHints="" />

	<EditText
		android:id="@+id/etPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="32dp"
		android:layout_marginStart="32dp"
		android:layout_marginTop="24dp"
		android:background="@drawable/bg_round_corners_white"
		android:ems="10"
		android:hint="@string/password_hint"
		android:inputType="textPassword"
		android:paddingBottom="16dp"
		android:paddingEnd="24dp"
		android:paddingStart="24dp"
		android:paddingTop="16dp"
		android:drawableEnd="@drawable/ic_visibility_black_24dp"
		app:layout_constraintEnd_toEndOf="@+id/ivLock"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="@+id/ivLock"
		app:layout_constraintTop_toBottomOf="@+id/etEmail"
		android:autofillHints="" />

	<TextView
		android:id="@+id/tvForgotPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:clickable="true"
		android:focusable="true"
		android:fontFamily="@font/raleway_light"
		android:text="@string/forgot_password"
		android:textColor="@android:color/white"
		app:layout_constraintStart_toStartOf="@+id/etPassword"
		app:layout_constraintTop_toBottomOf="@+id/etPassword" />

	<Button
		android:id="@+id/btnLogin"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:background="@drawable/bg_round_corners_white"
		android:fontFamily="@font/montserrat"
		android:text="@string/login_button_text"
		app:layout_constraintStart_toStartOf="@+id/tvForgotPassword"
		app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

	<TextView
		android:id="@+id/tvSignup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="@font/montserrat"
		android:text="@string/signup_button_text"
		android:textAppearance="@style/TextAppearance.Custom"
		android:textColor="#FFFFFF"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
		app:layout_constraintEnd_toEndOf="@+id/etPassword"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toEndOf="@+id/btnLogin"
		app:layout_constraintTop_toTopOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>
