<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:fillViewport="true"
	android:background="@color/colorPrimaryDark"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/clDetails"
			android:layout_width="369dp"
			android:layout_height="526dp"
			android:layout_marginBottom="32dp"
			android:layout_marginEnd="24dp"
			android:layout_marginStart="24dp"
			android:layout_marginTop="32dp"
			android:background="@drawable/bg_round_corners_white"
			android:visibility="visible"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<EditText
				android:id="@+id/etFName"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/fname_hint"
				android:inputType="textPersonName"
				app:layout_constraintEnd_toEndOf="@+id/etIdNumber"
				app:layout_constraintStart_toStartOf="@+id/etIdNumber"
				app:layout_constraintTop_toBottomOf="@+id/tvLabelFName" />

			<EditText
				android:id="@+id/etMName"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/mname_hint"
				android:inputType="textPersonName"
				app:layout_constraintEnd_toEndOf="@+id/etFName"
				app:layout_constraintStart_toStartOf="@+id/etFName"
				app:layout_constraintTop_toBottomOf="@+id/tvLabelMName" />

			<EditText
				android:id="@+id/etLName"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/lname_hint"
				android:inputType="textPersonName"
				app:layout_constraintEnd_toEndOf="@+id/etMName"
				app:layout_constraintStart_toStartOf="@+id/etMName"
				app:layout_constraintTop_toBottomOf="@+id/tvLabelLName" />

			<EditText
				android:id="@+id/etEmail"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/email_hint"
				android:inputType="textEmailAddress"
				app:layout_constraintEnd_toEndOf="@+id/etLName"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/etLName"
				app:layout_constraintTop_toBottomOf="@+id/tvLabelEmail" />

			<EditText
				android:id="@+id/etMobile"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/mobile_hint"
				android:inputType="phone"
				app:layout_constraintEnd_toEndOf="@+id/etEmail"
				app:layout_constraintStart_toStartOf="@+id/etEmail"
				app:layout_constraintTop_toBottomOf="@+id/tvLabelPhone" />

			<EditText
				android:id="@+id/etIdNumber"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="24dp"
				android:layout_marginStart="24dp"
				android:ems="10"
				android:hint="@string/id_number_hint"
				android:inputType="number"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvLabelIDNumber" />

			<TextView
				android:id="@+id/tvLabelIDNumber"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="24dp"
				android:layout_marginTop="16dp"
				android:fontFamily="@font/raleway_light"
				android:text="@string/id_number_label"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/tvLabelMName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:fontFamily="@font/raleway_light"
				android:text="@string/mname_hint"
				app:layout_constraintStart_toStartOf="@+id/tvLabelFName"
				app:layout_constraintTop_toBottomOf="@+id/etFName" />

			<TextView
				android:id="@+id/tvLabelLName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:fontFamily="@font/raleway_light"
				android:text="@string/lname_hint"
				app:layout_constraintStart_toStartOf="@+id/tvLabelFName"
				app:layout_constraintTop_toBottomOf="@+id/etMName" />

			<TextView
				android:id="@+id/tvLabelEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:fontFamily="@font/raleway_light"
				android:text="@string/email_label"
				app:layout_constraintStart_toStartOf="@+id/tvLabelLName"
				app:layout_constraintTop_toBottomOf="@+id/etLName" />

			<TextView
				android:id="@+id/tvLabelFName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:fontFamily="@font/raleway_light"
				android:text="@string/fname_hint"
				app:layout_constraintStart_toStartOf="@+id/tvLabelIDNumber"
				app:layout_constraintTop_toBottomOf="@+id/etIdNumber" />

			<TextView
				android:id="@+id/tvLabelPhone"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:fontFamily="@font/raleway_light"
				android:text="@string/mobile_hint"
				app:layout_constraintStart_toStartOf="@+id/tvLabelEmail"
				app:layout_constraintTop_toBottomOf="@+id/etEmail" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<ImageView
			android:id="@+id/ivClose"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="24dp"
			android:layout_marginTop="24dp"

			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_close_black_24dp"
			android:contentDescription="@string/close_icon" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>