<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:fillViewport="true"
	android:background="@color/colorPrimaryDark"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="240dp"
			android:fontFamily="@font/montserrat"
			android:text="@string/secure_your_account"
			android:textColor="@android:color/white"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ImageView
			android:id="@+id/ivClose"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="24dp"
			android:layout_marginTop="24dp"

			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_close_black_24dp"
			android:contentDescription="@string/close_icon" />

		<Button
			android:id="@+id/btnFinish"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="48dp"
			android:text="@string/button_text_finish"
			app:layout_constraintEnd_toEndOf="@+id/etPassword"
			app:layout_constraintHorizontal_bias="0.498"
			app:layout_constraintStart_toStartOf="@+id/etPassword"
			app:layout_constraintTop_toBottomOf="@+id/etPassword" />

		<EditText
			android:id="@+id/etPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="32dp"
			android:drawableEnd="@drawable/ic_visibility_black_24dp"
			android:ems="10"
			android:hint="@string/password_hint"
			android:inputType="textPassword"
			app:layout_constraintEnd_toEndOf="@+id/textView2"
			app:layout_constraintStart_toStartOf="@+id/textView2"
			app:layout_constraintTop_toBottomOf="@+id/textView2" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>